--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -72,5 +72,10 @@
         </form>
     </div>
 </div>
+<div th:text="${cookieValue}"></div>
 </body>
+<div>
+    <button type="submit" class="btn btn-dark px-2 mx-1" style="height: 100px">Sign out</button>
+
+</div>
 </html>
