--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -75,7 +75,8 @@
 <div th:text="${cookieValue}"></div>
 </body>
 <div>
-    <button type="submit" class="btn btn-dark px-2 mx-1" style="height: 100px">Sign out</button>
-
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
 </div>
 </html>
