fix error (when input empty email)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 
 
                 <input type="email" th:field="*{email}" style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-
+                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
                 <button type="submit" class="btn btn-dark">Go</button>
             </form>
             </div>
