more views for admins added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
                 <button type="submit" class="btn btn-dark">Go</button>
             </form>
             </div>
+    </div>
 </div>
 
 </body>
