--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -67,6 +67,10 @@
 
     </div>
 </div>
-
+<footer>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href=""> JA Course [team 1]</a>
+    </div>
+</footer>
 </body>
 </html>
