--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -8,30 +8,22 @@
     <title>Add New Conference</title>
 </head>
 <body>
-<!--<nav class="navbar navbar-light" style="background-color: #e3f2fd;">-->
-<!--    <div class="col-md-8"></div>-->
-<!--    <div class="col-6 col-md-4">-->
-<!--        <a class="btn btn-light my-2" href="#">Dashboard</a>-->
-<!--        <a class="btn btn-light my-2" href="#">Statistics</a>-->
-<!--        <a class="btn btn-light my-2" href="#">Manage Users</a>-->
-<!--        <a class="btn btn-light my-2" href="">Log out</a>-->
-<!--    </div>-->
-<!--</nav>-->
-
-<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href="/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor02">
+    <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="">Manage Users</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Statistics</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Manage Users</a>
-            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
                 <a class="nav-link" href="#">Log out</a>
             </li>
