--- a/src/main/resources/templates/topic-add.html
+++ b/src/main/resources/templates/topic-add.html
@@ -8,16 +8,28 @@
     <title>Add New Topic</title>
 </head>
 <body>
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <div class="col-md-8"></div>
-    <div class="col-6 col-md-4">
-        <a class="btn btn-light my-2" href="#">Dashboard</a>
-        <a class="btn btn-light my-2" href="#">Statistics</a>
-        <a class="btn btn-light my-2" href="#">Manage Users</a>
-        <a class="btn btn-light my-2" href="">Log out</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href="/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor03">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="">Manage Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Statistics</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log out</a>
+            </li>
+        </ul>
     </div>
 </nav>
-
 <div class="container-fluid mx-auto mt-5">
     <h1 class="text-center">Add Topic</h1>
 </div>
@@ -31,20 +43,20 @@
                 <input type="email" class="form-control" id="inputEmail4">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputSpeaker">Speaker Name</label>
-                <input type="text" class="form-control" id="inputSpeaker" placeholder="Johan Bah">
+                <label for="inputSpeaker">Speaker</label>
+                <input type="text" class="form-control" id="inputSpeaker" placeholder="Name, position">
 
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
-            <label for="conf-time-start">Start Date and Time</label>
+            <label for="conf-time-start">Start at:</label>
             <input type="datetime-local" class="form-control" id="conf-time-start"
                    name="meeting-time" value="2018-06-12T19:30"
                    min="2020-04-21T00:00" max="2020-09-14T00:00">
             </div>
             <div class="form-group col-md-6">
-            <label for="conf-time-end">End Date and Time</label>
+            <label for="conf-time-end">End at:</label>
             <input type="datetime-local" class="form-control" id="conf-time-end"
                    name="meeting-time" value="2018-06-12T19:30"
                    min="2020-04-21T00:00" max="2020-09-14T00:00">
