--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -10,19 +10,27 @@
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href=""><i class="fab fa-napster"></i> LIVE Conference</a>
+    <a class="navbar-brand" href="#"><i class="far fa-sad-tear"></i> Leave</a>
+
+</nav>
 <nav class="nav py-3 justify-content-center">
-    <ul class="nav">
-        <h1>Cinference</h1>
-        <p>conf desc</p>
-        <li class="nav-item h4"><span style="color: green"><i class="fab fa-rocketchat"></i></span> NOW: Current Topic Name</li>
-    </ul>
-    <p>Topic desc</p>
-    <button type="button" class="btn btn-secondary float-right ml-5">Schedule</button>
+
+    <div class="col-sm-8 mx-auto py-3">
+
+        <h3 class="text-center h3 py-3">CONFERENCE NAME</h3>
+        <ul class="nav mx-auto">
+            <li class="nav-item h4 text-center mx-auto"><span style="color: green"><i class="fab fa-rocketchat"></i></span> NOW: Current Topic Name <a class="btn btn-outline-info" href="/schedule">Schedule</a></li>
+        </ul>
+        <p class="px-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    </div>
+
 </nav>
 <div class="container-fluid py-2">
     <h3 class="h3 text-center pt-2">Top questions</h3>
     <p class="text-center">for current topic</p>
-<div class="border bg-light col-sm-6 mx-auto">
+<div class="border bg-light col-sm-8 mx-auto">
 
     <div class="table-responsive text-nowrap">
         <table class="table table-borderless">
@@ -62,7 +70,7 @@
 <div class="container-fluid py-3 all-questions-block">
     <h3 class="h3 text-center pt-2">All questions</h3>
     <p class="text-center">for current topic</p>
-    <div class="border col-sm-6 mx-auto py-1" style="height: 300px; overflow-y: scroll; overflow-x: hidden;">
+    <div class="border col-sm-8 mx-auto py-1" style="height: 300px; overflow-y: scroll; overflow-x: hidden;">
 
         <div class="table-responsive text-nowrap">
             <table class="table table-borderless table-fixed">
@@ -158,7 +166,7 @@
     <p class="text-center"><i class="fab fa-napster"></i></p>
 </div>
 <div class="container-fluid py-1 fixed-bottom bg-light">
-    <div class=" col-sm-6 mx-auto py-3">
+    <div class=" col-sm-6 mx-auto py-1">
         <form action="POST" class="form-inline mx-auto" >
         <textarea class="form-control" rows="2" style="float: left; width: 80%"></textarea>
         <button type="submit" class="btn btn-success px-2 mx-1" style="height: 50px; width: 15%"><i class="fas fa-chevron-right"></i></button>
