--- a/src/main/resources/templates/topic-add.html
+++ b/src/main/resources/templates/topic-add.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
     <div class="col-md-8"></div>
     <div class="col-6 col-md-4">
-        <a class="btn btn-light my-2" href="#">Dashboard</a>
+        <a class="btn btn-light my-2" href="/dashboard">Dashboard</a>
         <a class="btn btn-light my-2" href="#">Statistics</a>
         <a class="btn btn-light my-2" href="#">Manage Users</a>
         <a class="btn btn-light my-2" href="">Log out</a>
