add ConferenceDto add ConferenceMapper change VisiorController and ConferenceController (now path is "localhost:8080/{confId}" "localhost:8080/liveconference/{confId}" where confId is Conference id)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,12 +18,14 @@
             <h5><a href="" >click here to see all our events ></a></h5>
         </div>
 
-            <div class="col-md-10 d-flex justify-content-center mx-auto ">
+        <div class="col-md-10 d-flex justify-content-center mx-auto ">
 
-            <form  action="/registration-visitor" th:object="${visitor}" method="POST" class="form-inline py-5 justify-content-center "  style="width: 80%; margin-top: 20%">
+            <form action="#" th:action="@{'/registration-visitor/'+${visitor.getConfId()}}"  th:object="${visitor}" method="POST"
+                  class="form-inline py-5 justify-content-center " style="width: 80%; margin-top: 20%">
 
 
-                <input type="email" th:field="*{email}" style="width: 60%;" class="form-control px-5 py-4 mr-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" th:field="*{email}" style="width: 60%;" class="form-control px-5 py-4 mr-2"
+                       id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
                 <button type="submit" class="btn btn-dark">Go</button>
             </form>
