--- a/src/main/resources/templates/conference-edit.html
+++ b/src/main/resources/templates/conference-edit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../static/css/all.css" rel="stylesheet" th:href="@{/css/all.css}">
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-    <title>Add New Topic</title>
+    <title>Edit Conference</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
@@ -31,7 +31,7 @@
     </div>
 </nav>
 <div class="container-fluid mx-auto mt-5">
-    <h1 class="text-center">Add Topic</h1>
+    <h1 class="text-center">Edit Conference</h1>
 </div>
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
@@ -39,45 +39,39 @@
     <form>
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="inputEmail4">Name</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Topic Name">
+                <label for="inputName">Name</label>
+                <textarea type="text" class="form-control" id="inputName" name="textarea" rows="1" cols="50">Get name from DB</textarea>
             </div>
             <div class="form-group col-md-6">
-                <label for="inputSpeaker">Speaker</label>
-                <input type="text" class="form-control" id="inputSpeaker" placeholder="Name, position">
-
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-            <label for="conf-time-start">Start at:</label>
-            <input type="datetime-local" class="form-control" id="conf-time-start"
-                   name="meeting-time" value=""
-                   min="2020-04-21T00:00" max="2020-09-14T00:00">
-            </div>
-            <div class="form-group col-md-6">
-            <label for="conf-time-end">End at:</label>
-            <input type="datetime-local" class="form-control" id="conf-time-end"
-                   name="meeting-time" value=""
-                   min="2020-04-21T00:00" max="2020-09-14T00:00">
+                <label for="conf-time">Date and Time</label>
+<!--                TODO: get value="" for this input from DB-->
+                <input type="datetime-local" class="form-control" id="conf-time"
+                       name="meeting-time" value="2018-06-12T19:30"
+                       min="2020-04-21T00:00" max="2020-09-14T00:00">
             </div>
         </div>
         <div class="form-group">
+            <label for="inputAddress">Address</label>
+            <textarea type="text" class="form-control" id="inputAddress" name="textarea" rows="1" cols="50">Get address from DB</textarea>
+
+        </div>
+        <div class="form-group">
             <label for="inputDescr">Description</label>
-            <textarea type="text" class="form-control" id="inputDescr" placeholder="Apartment, studio, or floor"></textarea>
+            <textarea type="text" class="form-control" id="inputDescr" >Get description from DB</textarea>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="uploadImage">Upload speaker picture</label>
-                <input type="file" class="form-control-file" id="uploadImage">
-            </div>
-            <div class="form-group col-md-4">
+<!--            TODO: Do wee need this here?-->
+<!--            <div class="form-group col-md-6">-->
+<!--                <label for="uploadImage">Upload an image</label>-->
+<!--                <input type="file" class="form-control-file" id="uploadImage">-->
+<!--            </div>-->
+<!--            <div class="form-group col-md-4">-->
 
-            </div>
+<!--            </div>-->
 
         </div>
 
-        <!--this button in case of success should do redirect to /conference-page -->
+<!--this button in case of success should do redirect to /conference-page -->
         <button type="submit" class="btn btn-info">Save</button>
     </form>
 
