--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
         <div class="">
             <h1>Welcome!</h1>
-            <h2>CONFERENCE NAME is going right now</h2>
+            <h2 th:if="${conference!=null}" th:text="${conference.getTheme()}">CONFERENCE NAME is going right now</h2>
             <p>(next closest event will take place at: 24 Apr)</p>
             <h5><a href="" >click here to see all our events ></a></h5>
         </div>
