admin header and footer moved to fragments file

--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -76,11 +76,6 @@
     </form>
 
 </div>
-
-<footer class="">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href=""> JA Course [team 1]</a>
-    </div>
-</footer>
+<div th:replace="fragments :: footer"></div>
 </body>
 </html>
