--- a/src/main/resources/templates/topic-dashboard.html
+++ b/src/main/resources/templates/topic-dashboard.html
@@ -79,11 +79,7 @@
 </div>
 
 
-<footer>
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href=""> JA Course [team 1]</a>
-    </div>
-</footer>
+<div th:replace="fragments :: footer"></div>
 
 </body>
 </html>
