--- a/src/main/resources/templates/conference-edit.html
+++ b/src/main/resources/templates/conference-edit.html
@@ -8,28 +8,7 @@
     <title>Edit Conference</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="">Manage Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Statistics</a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Log out</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div th:replace="fragments :: admin-header"></div>
 <div class="container-fluid mx-auto mt-5">
     <h1 class="text-center">Edit Conference</h1>
 </div>
@@ -77,10 +56,7 @@
 
 </div>
 
-<footer class="">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href=""> JA Course [team 1]</a>
-    </div>
-</footer>
+<div th:replace="fragments :: footer"></div>
+
 </body>
 </html>
