--- a/src/main/resources/templates/staffdashboard.html
+++ b/src/main/resources/templates/staffdashboard.html
@@ -26,7 +26,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
-                <a class="nav-link" href="#">Log out</a>
+                <a  class="nav-link" th:href="@{'/logout_admin'}">Log out</a>
             </li>
         </ul>
     </div>
