--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -12,7 +12,8 @@
 <body>
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href=""><i class="fab fa-napster"></i> LIVE Conference</a>
-    <a class="navbar-brand" href="#"><i class="far fa-sad-tear"></i> Leave</a>
+    <i class="navbar-brand" th:text="${cookieValue}"> Visitor email</i>
+    <a class="navbar-brand" th:href="@{'/logout/'+${conferenceId}}"> <i class="far fa-sad-tear"></i> Leave</a>
 
 </nav>
 <nav class="nav py-3 justify-content-center">
@@ -21,50 +22,55 @@
 
         <h3 class="text-center h3 py-3">CONFERENCE NAME</h3>
         <ul class="nav mx-auto">
-            <li class="nav-item h4 text-center mx-auto"><span style="color: green"><i class="fab fa-rocketchat"></i></span> NOW: Current Topic Name <a class="btn btn-outline-info" href="/schedule">Schedule</a></li>
+            <li class="nav-item h4 text-center mx-auto"><span style="color: green"><i
+                    class="fab fa-rocketchat"></i></span> NOW: Current Topic Name <a class="btn btn-outline-info"
+                                                                                     href="/schedule">Schedule</a></li>
         </ul>
-        <p class="px-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        <p class="px-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged.</p>
     </div>
 
 </nav>
 <div class="container-fluid py-2">
     <h3 class="h3 text-center pt-2">Top questions</h3>
     <p class="text-center">for current topic</p>
-<div class="border bg-light col-sm-8 mx-auto">
+    <div class="border bg-light col-sm-8 mx-auto">
 
-    <div class="table-responsive text-nowrap">
-        <table class="table table-borderless">
-        <thead>
-        <tr>
-            <th scope="col" style="width: 10%">Likes</th>
-            <th scope="col" style="width: 50%">Question</th>
-            <th scope="col" style="width: 20%">UserName</th>
-            <th scope="col" style="width: 20%">Date (sort)</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row"><i class="far fa-heart"></i> 51</th>
-            <td>Question first text</td>
-            <td>Otto</td>
-            <td>18:36 01-02-2019</td>
-        </tr>
-        <tr>
-            <th scope="row"><i class="far fa-heart"></i> 30</th>
-            <td>Question 2 text</td>
-            <td>Thornton</td>
-            <td>18:38 01-02-2019</td>
-        </tr>
-        <tr>
-            <th scope="row"><span style="color: darkred"><i class="fas fa-heart"></i></span> 22</th>
-            <td>Question 3 text</td>
-            <td>the Bird</td>
-            <td>18:41 01-02-2019</td>
-        </tr>
-        </tbody>
-    </table>
+        <div class="table-responsive text-nowrap">
+            <table class="table table-borderless">
+                <thead>
+                <tr>
+                    <th scope="col" style="width: 10%">Likes</th>
+                    <th scope="col" style="width: 50%">Question</th>
+                    <th scope="col" style="width: 20%">UserName</th>
+                    <th scope="col" style="width: 20%">Date (sort)</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row"><i class="far fa-heart"></i> 51</th>
+                    <td>Question first text</td>
+                    <td>Otto</td>
+                    <td>18:36 01-02-2019</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="far fa-heart"></i> 30</th>
+                    <td>Question 2 text</td>
+                    <td>Thornton</td>
+                    <td>18:38 01-02-2019</td>
+                </tr>
+                <tr>
+                    <th scope="row"><span style="color: darkred"><i class="fas fa-heart"></i></span> 22</th>
+                    <td>Question 3 text</td>
+                    <td>the Bird</td>
+                    <td>18:41 01-02-2019</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 
 </div>
 <div class="container-fluid py-3 all-questions-block">
@@ -167,17 +173,15 @@
 </div>
 <div class="container-fluid py-1 fixed-bottom bg-light">
     <div class=" col-sm-6 mx-auto py-1">
-        <form action="POST" class="form-inline mx-auto" >
-        <textarea class="form-control" rows="2" style="float: left; width: 80%"></textarea>
-        <button type="submit" class="btn btn-success px-2 mx-1" style="height: 50px; width: 15%"><i class="fas fa-chevron-right"></i></button>
+        <form action="POST" class="form-inline mx-auto">
+            <textarea class="form-control" rows="2" style="float: left; width: 80%"></textarea>
+            <button type="submit" class="btn btn-success px-2 mx-1" style="height: 50px; width: 15%"><i
+                    class="fas fa-chevron-right"></i></button>
         </form>
     </div>
-</div>
-<div th:text="${cookieValue}"></div>
-</body>
-<div>
-       <form action="#" th:action="@{'/logout/'+${conferenceId}}"  method="post">
-        <input type="submit" value="Sign Out"/>
-    </form>
-</div>
+
+
+    <div>
+
+    </div>
 </html>
