--- a/src/main/resources/templates/conference-page.html
+++ b/src/main/resources/templates/conference-page.html
@@ -13,9 +13,9 @@
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
         <div class="row py-3 flex-column">
-    <h3 class="text-center h3 py-3 text-uppercase">Conference name<a class="btn btn-sm btn-info mx-3" href="/conference-edit">Edit</a></h3>
-            <p class="text-center py-2"><b>10 Apr 2020</b> 11:00 - 17:30</p>
-            <p class="px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+            <h3 class="text-center h3 py-3 text-uppercase"><p th:text= "${Confid.getTheme()}"></p><a class="btn btn-sm btn-info mx-3" href="/conference-edit">Edit</a></h3>
+            <p class="text-center py-2"><b th:text= "${Confid.getStart()}"></b> <b th:text= "${Confid.getEnd()}"></b></p>
+            <p class="px-5" th:text="${Confid.getDescription()}"></p>
     </div>
     </div>
 <hr>
