--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -36,26 +36,26 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form>
+    <form action="#" th:action="@{'/conference-add'}" method="POST">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputName">Name</label>
-                <input type="email" class="form-control" id="inputName" placeholder="Conference Name">
+                <input type="text" th:name="theme" class="form-control" id="inputName" placeholder="Conference Name">
             </div>
-            <div class="form-group col-md-6">
+            <!--<div class="form-group col-md-6">
                 <label for="conf-time">Date and Time</label>
-                <input type="datetime-local" class="form-control" id="conf-time"
+                <input type="datetime-local" th:name="start" class="form-control" id="conf-time"
                        name="meeting-time" value=""
                        min="2020-04-21T00:00" max="2020-09-14T00:00">
-            </div>
+            </div>-->
         </div>
         <div class="form-group">
             <label for="inputAddress">Address</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            <input type="text" th:name="address" class="form-control" id="inputAddress" placeholder="1234 Main St">
         </div>
         <div class="form-group">
             <label for="inputDescr">Description</label>
-            <textarea type="text" class="form-control" id="inputDescr" placeholder="Apartment, studio, or floor"></textarea>
+            <textarea type="text" class="form-control" th:name="description" id="inputDescr" placeholder="Apartment, studio, or floor"></textarea>
         </div>
 
         <!--            TODO: Do wee need this image input here?-->
@@ -70,7 +70,6 @@
             </div>
 
         </div>
-
         <!--this button in case of success should do redirect to /staffdashboard -->
         <button type="submit" class="btn btn-info">Save</button>
     </form>
