Addind Conf add

--- a/src/main/resources/templates/staffdashboard.html
+++ b/src/main/resources/templates/staffdashboard.html
@@ -50,7 +50,7 @@
             <th scope="col">EndDate</th>
 
             <th></th>
-            <th><a class="btn btn-primary btn-sm" href="/conference-add">Add</a></th>
+            <th><a class="btn btn-primary btn-sm" href="/conferenceadd">Add</a></th>
 
         </tr>
         </thead>
