--- a/src/main/resources/templates/conference-edit.html
+++ b/src/main/resources/templates/conference-edit.html
@@ -15,11 +15,11 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form>
+    <form action="#" th:action="@{'/conference-edit/'+${confId}}" th:object="${conf}" method="post">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputName">Name</label>
-                <textarea type="text" class="form-control" id="inputName" name="textarea" rows="1" cols="50">Get name from DB</textarea>
+                <textarea type="text" th:field="*{theme}" class="form-control" id="inputName" name="textarea" rows="1" cols="50">Get name from DB</textarea>
             </div>
             <div class="form-group col-md-6">
                 <label for="conf-time">Date and Time</label>
@@ -31,12 +31,12 @@
         </div>
         <div class="form-group">
             <label for="inputAddress">Address</label>
-            <textarea type="text" class="form-control" id="inputAddress" name="textarea" rows="1" cols="50">Get address from DB</textarea>
+            <textarea type="text" th:field="*{address}" class="form-control" id="inputAddress" name="textarea" rows="1" cols="50">Get address from DB</textarea>
 
         </div>
         <div class="form-group">
             <label for="inputDescr">Description</label>
-            <textarea type="text" class="form-control" id="inputDescr" >Get description from DB</textarea>
+            <textarea type="text" th:field="*{description}" class="form-control" id="inputDescr" >Get description from DB</textarea>
         </div>
         <div class="form-row">
 <!--            TODO: Do wee need this here?-->
