--- a/src/main/resources/templates/conference-page.html
+++ b/src/main/resources/templates/conference-page.html
@@ -13,7 +13,7 @@
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
         <div class="row py-3 flex-column">
-            <h3 class="text-center h3 py-3 text-uppercase"><p th:text= "${Confid.getTheme()}"></p><a class="btn btn-sm btn-info mx-3" href="/conference-edit">Edit</a></h3>
+            <h3 class="text-center h3 py-3 text-uppercase"><p th:text= "${Confid.getTheme()}"></p><a class="btn btn-sm btn-info mx-3" th:href="@{'/conference-edit/'+${confId}}">Edit</a></h3>
             <p class="text-center py-2"><b th:text= "${Confid.getStart()}"></b> <b th:text= "${Confid.getEnd()}"></b></p>
             <p class="px-5" th:text="${Confid.getDescription()}"></p>
     </div>
