--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -37,36 +37,41 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form action="#" th:action="@{'/conference-add'}" method="POST">
+    <form action="#" th:action="@{'/conference-add'}" th:object="${conference}" method="POST">
         <div class="form-group">
             <div class="form-group col-md-6">
                 <label for="inputName">Name</label>
-                <input type="text" class="form-control" th:name="theme" id="inputName" placeholder="Conference Name">
+                <input type="text" class="form-control" th:field="*{theme}" id="inputName" placeholder="Conference Name">
             </div>
         </div>
         <div class="form-row">
 
             <div class="form-group col-md-6">
                 <label for="conf-time-start">Start</label>
-                <input type="datetime-local" th:name="start" class="form-control" id="conf-time-start"
+                <input type="datetime-local" th:field="*{start}" class="form-control" id="conf-time-start"
                        name="meeting-time" value="2020-03-30T00:00"
                        min="2020-03-30T00:00">
             </div>
             <div class="form-group col-md-6">
                 <label for="conf-time-end">End</label>
-                <input type="datetime-local" th:name="end" class="form-control" id="conf-time-end"
+                <input type="datetime-local" th:field="*{end}" class="form-control" id="conf-time-end"
                        name="meeting-time" value="2020-03-30T00:00"
-                       min="2020-03-30T00:00">
+                       min="2020-03-30T00:00" >
+
+            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}" ></div>
+
+
             </div>
+
 
         </div>
         <div class="form-group">
             <label for="inputAddress">Address</label>
-            <input type="text" th:name="address" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            <input type="text" th:field="*{address}" class="form-control" id="inputAddress" placeholder="1234 Main St">
         </div>
         <div class="form-group">
             <label for="inputDescr">Description</label>
-            <textarea type="text" th:name="description" class="form-control" id="inputDescr"
+            <textarea type="text" th:field="*{description}" class="form-control" id="inputDescr"
                       placeholder="Description"></textarea>
         </div>
 
