add set confrence to staff change satff dashboart (admin can see all conference, moderator can see only his conference

--- a/src/main/resources/templates/forbidden-page.html
+++ b/src/main/resources/templates/forbidden-page.html
@@ -26,7 +26,7 @@
         <div class="notfound-404">
             <h1>Stop!</h1>
 
-            <h2>403 - You shall not pass</h2>
+            <h2>403 - Forbidden</h2>
         </div>
         <a href="#">Contact us</a>
     </div>
