add fragment admin-header to some pages, add error page bad request

--- a/src/main/resources/templates/stafflist.html
+++ b/src/main/resources/templates/stafflist.html
@@ -8,6 +8,7 @@
     <title>Conferences Admin Panel</title>
 </head>
 <body>
+<div th:replace="fragments :: admin-header"></div>
   Staff list
   <!-- TODO: create form for adding staff roles -->
 add roles to staff
