--- a/src/main/resources/templates/badrequest-page.html
+++ b/src/main/resources/templates/badrequest-page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>403 Forbidden</title>
+    <title>400 Bad Request</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
@@ -24,9 +24,9 @@
 <div id="notfound">
     <div class="notfound">
         <div class="notfound-404">
-            <h1>Stop!</h1>
+            <h1>Oops!</h1>
 
-            <h2>403 - Forbidden</h2>
+            <h2>400 - There was a problem with your request</h2>
         </div>
         <a href="#">Contact us</a>
     </div>
