--- a/src/main/resources/templates/staffdashboard.html
+++ b/src/main/resources/templates/staffdashboard.html
@@ -9,29 +9,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
-            aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="">Manage Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Statistics</a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{'/logout_admin'}">Log out</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div th:replace="fragments :: admin-header"></div>
 
 <div class="container-fluid mx-auto mt-5">
     <h1 class="text-center">Conferences</h1>
